src/accessible-bootstrap-carousel.scss
$carousel-fontawesome-4: false !default;

.carousel-player {
  position: relative;
}

.carousel-item__link {
  display: block;

  &:hover,
  &:focus {
    .carousel-item__open-modal-button {
      opacity: 1;
      transform: translate(-50%, -50%) scale3d(1.2, 1.2, 1);
    }
  }

  .carousel-item__open-modal-button {
    font-size: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 45px;
    height: 45px;
    border-radius: 45px;
    color: $white;
    background: $black;
    opacity: 0;
    transition: ease-in-out 0.2s all;
    text-decoration: none;
  
    .icon {
      line-height: 0.8;
    }
  }
}

.carousel-item__img {
  @include img-fluid;
  width: 100%;
}

.carousel-caption {
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba($black, .75);
  box-sizing: border-box;
  padding: $spacer;
  width: 100%;
}

.carousel-descriptions {
  display: flex;
  flex-direction: column;
  list-style: none;
  width: 100%;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  background: $gray-100;
  border-bottom: solid $border-width $border-color;

  transition: ease-in-out .2s all;

  &__item {
    display: none;
    list-style: none;
    padding: $grid-gutter-width/3;
    margin: 0;

    p:last-child {
      margin-bottom: 0;
    }
  }
}

.carousel-tools {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.5rem;
  background: $gray-100;

  &__play-pause-button {
    margin-right: auto;

    &::before {
      @if $carousel-fontawesome-4 {
        @include fa-icon();
        content: $fa-var-pause;
      } @else {
        @extend .fa;
        content: fa-content($fa-var-pause);
      }
    }
    &.paused::before {
      @if $carousel-fontawesome-4 {
        content: $fa-var-play;
      } @else {
        content: fa-content($fa-var-play);
      }
    }
  }

  &__hide-button {
    margin-left: auto;

    &::before {
      @if $carousel-fontawesome-4 {
        @include fa-icon();
        content: $fa-var-eye-slash;
      } @else {
        @extend .fa;
        content: fa-content($fa-var-eye-slash);
      }
    }
    &.hidden::before {
      @if $carousel-fontawesome-4 {
        @include fa-icon();
        content: $fa-var-eye;        
      } @else {
        @extend .fa;
        content: fa-content($fa-var-eye);
      }
    }
  }

  &__indicators {
    margin: 0 auto;
  }

  .carousel-indicators {
    list-style: none;
    position: relative;
    left: auto;
    right: auto;
    bottom: auto;
    padding: 0;
    margin: auto;
  
    li {
      @extend .btn;
      display: flex;
      align-items: center;
      justify-content: center;
      @include button-variant($gray-300, $gray-300);
      min-width: 30px;
      width: auto;
      height: auto;
      margin: 0 0 0 0.25rem;
      text-indent: unset;
  
      &.active {
        @include button-variant($primary, $primary);
      }
  
      &::before {
        display: block;
        position: initial;
        top: auto;
        left: auto;
        width: auto;
        height: auto;
      }
    }
  }
}

.carousel-control-prev,
.carousel-control-next {
  width: 10%;
  font-size: 30px;

  &,
  &:hover {
    transition: ease-in-out 0.2s all;
  }
  &:hover {
    background: rgba($black, 0.5);
    text-decoration: none;

    span {
      background: rgba($black, 0);
    }
  }

  .carousel-control-prev-icon,
  .carousel-control-next-icon {
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: rgba($black, 0.7);

    &::before {      
      @if $carousel-fontawesome-4 {
        @include fa-icon();
        content: $fa-var-angle-left;
      } @else {
        @extend .fa;
        content: fa-content($fa-var-angle-left);
      }
      
    }
  }
  .carousel-control-next-icon::before {
    @if $carousel-fontawesome-4 {
      @include fa-icon();
      content: $fa-var-angle-right;
    } @else {
      @extend .fa;
      content: fa-content($fa-var-angle-right);
    }
    
  }
}

